--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,6 +22,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install httpx  
+
 
     - name: Lint with flake8
       run: |
@@ -29,7 +31,10 @@ jobs:
 
     - name: Run tests
       run: |
+        export PYTHONPATH=$PYTHONPATH:$(pwd)
         pytest
-        
+
     - name: Show installed packages
       run: pip list
+
+  
