--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,12 +1,10 @@
 name: CI
 
-
 on:
   push:
     branches: [main]
   pull_request:
     branches: [main]
-
 
 jobs:
   build:
@@ -15,32 +13,27 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.11'
 
-
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install httpx  
 
 
     - name: Lint with flake8
       run: |
         flake8 app/
 
-    - name: Show installed packages (debug)
-      run: pip list
-
-
     - name: Run tests
       run: |
-        export PYTHONPATH="${PYTHONPATH}:$(pwd)"
+        export PYTHONPATH=$PYTHONPATH:$(pwd)
         pytest
 
+    - name: Show installed packages
+      run: pip list
 
-    - name: Set PYTHONPATH
-      run: echo "PYTHONPATH=$PWD" >> $GITHUB_ENV
